--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"test:status": "nan0test status --hide-name",
 		"precommit": "npm test",
 		"prepush": "npm test",
-		"prepare": "husky"
+		"prepare": "husky",
+		"clean": "rm -rf .cache/ && rm -rf dist/",
+		"clean:modules": "rm -rf node_modules"
 	},
 	"exports": {
 		".": {
@@ -41,7 +43,8 @@
 		"@nan0web/types": "workspace:*",
 		"@nan0web/ui-cli": "workspace:*",
 		"@vitest/coverage-v8": "^3.2.4",
-		"vitest": "^3.2.4"
+		"vitest": "^3.2.4",
+		"husky": "^9.1.7"
 	},
 	"dependencies": {
 		"string-width": "^7.2.0"
