--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"scripts": {
 		"build": "tsc",
 		"playground": "node playground/main.js",
-		"test": "node --test --test-timeout=3333 \"src/**/*.test.js\" | nan0test parse --fail",
+		"test": "node --test --test-timeout=3333 \"src/**/*.test.js\"",
+		"test:nan0test": "node --test --test-timeout=3333 \"src/**/*.test.js\" | nan0test parse --fail",
 		"test:coverage": "node --experimental-test-coverage --test-coverage-include=\"src/**/*.js\" --test-coverage-exclude=\"src/**/*.test.js\" --test \"src/**/*.test.js\"",
 		"test:coverage:collect": "nan0test coverage",
 		"test:docs": "node --test src/README.md.js",
@@ -34,6 +35,10 @@
 		"./components": {
 			"import": "./src/Component/index.js",
 			"types": "./types/Component/index.d.ts"
+		},
+		"./core": {
+			"import": "./src/core/index.js",
+			"types": "./types/core/index.d.ts"
 		},
 		"./cli-app": "./apps/cli/src/index.js",
 		"./mobile-app": "./apps/mobile/src/index.js",
