Adopted to new UiMessage.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	],
 	"scripts": {
 		"build": "tsc",
-		"playground": "node playground/main.js",
+		"play": "node play/main.js",
 		"test": "node --test --test-timeout=3333 \"src/**/*.test.js\"",
 		"test:nan0test": "node --test --test-timeout=3333 \"src/**/*.test.js\" | nan0test parse --fail",
 		"test:coverage": "node --experimental-test-coverage --test-coverage-include=\"src/**/*.js\" --test-coverage-exclude=\"src/**/*.test.js\" --test \"src/**/*.test.js\"",
@@ -20,6 +20,8 @@
 		"test:docs": "node --test src/README.md.js",
 		"test:release": "node --test \"releases/**/*.test.js\"",
 		"test:status": "nan0test status --hide-name",
+		"test:play": "node --test --test-timeout=3333 \"play/**/*.test.js\"",
+		"test:all": "npm run test && npm run test:docs && npm run test:play && npm run build",
 		"precommit": "npm test",
 		"prepush": "npm test",
 		"prepare": "husky",
@@ -52,23 +54,20 @@
 	"license": "ISC",
 	"packageManager": "pnpm@10.11.0",
 	"devDependencies": {
-		"@nan0web/co": "workspace:*",
-		"@nan0web/event": "workspace:*",
-		"@nan0web/i18n": "workspace:*",
-		"@nan0web/release": "workspace:*",
-		"@nan0web/test": "workspace:*",
-		"@nan0web/types": "workspace:*",
-		"@nan0web/ui-cli": "workspace:*",
+		"@nan0web/event": "^1.0.0",
+		"@nan0web/i18n": "^1.0.1",
+		"@nan0web/release": "1.0.1",
+		"@nan0web/test": "1.1.0",
+		"@nan0web/ui-cli": "1.0.2",
 		"@vitest/coverage-v8": "^3.2.4",
-		"vitest": "^3.2.4",
-		"husky": "^9.1.7"
+		"husky": "^9.1.7",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
+		"@nan0web/co": "^2.0.0",
+		"@nan0web/event": "^1.0.0",
+		"@nan0web/types": "^1.2.0",
 		"string-width": "^7.2.0"
 	},
-	"peerDependencies": {
-		"@nan0web/co": "^1.0.0",
-		"@nan0web/event": "^1.0.0",
-		"@nan0web/types": "^1.0.0"
-	}
+	"peerDependencies": {}
 }
